--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,37 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+header {
+    background-color: #0084FD;
+    height: 70px;
+}
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+}
+
+/* BLOCCO ROSSO */
+.red {
+    background-color: red;
+}
+/* BLOCCO ROSSO */
+
+.row {
+    display: flex;
+    width: 100%;
+}
+
+.pad-col {
+    padding: 10px 30px;
+}
+
+.col-50 {
+    width: 50%;
+    border: 1px dashed black;
+}
+
+.content {
+    height: 50px;
+}
