--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,23 @@ header {
     margin: 0 auto;
 }
 
-/* BLOCCO ROSSO */
+/* BLOCCHI COLORATI */
 .red {
     background-color: red;
 }
-/* BLOCCO ROSSO */
 
-/* BLOCCO BLUE */
 .lightblue {
     background-color: #B5DDFF;
 }
-/* BLOCCO BLUE */
+
+.white {
+    background-color: #fff;
+}
+/* BLOCCHI COLORATI */
+
+.violet {
+    background-color: #9792E4;
+}
 
 .row {
     display: flex;
@@ -55,9 +61,23 @@ header {
 
 }
 
+.col-60 {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 20px;
+    margin: 30px;
+}
+
 .col-50 {
     width: 50%;
     border: 1px dashed black;
+}
+
+.col-40 {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 20px;
+    margin: 30px;
 }
 
 .col-33 {
@@ -79,7 +99,23 @@ header {
 .height {
     height: 300px;
 }
+
+.height-2 {
+    height: 500px;
+}
 /* ALTEZZA CONTENT DA ELIMINARE */
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media screen and (min-width: 768px) {
     .container {
@@ -90,9 +126,19 @@ header {
         width: calc(66% - 40px);
     }
 
+    .col-60 {
+        width: 100%;
+    }
+
     .col-33 {
         width: calc(100% / 3 - 40px);
     }
+
+    .col-40 {
+        width: 100%;
+    }
+
+
 }
 
 @media screen and (min-width: 1200px) {
@@ -102,6 +148,14 @@ header {
 
     .col-66 {
         width: calc(66% - 40px);
+    }
+
+    .col-60 {
+        width: calc(60% - 60px);
+    }
+
+    .col-40 {
+        width: calc(40% - 60px);
     }
 
     .col-33 {
