--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,21 @@ header {
     margin-top: 20px;
 }
 
+.margin-top-col-viol {
+    margin-top: 50px;
+}
+
+.padding-top-col {
+    padding-top: 40px;
+}
+
+.col-100 {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 40px;
+    margin: 20px 30px;
+}
+
 .col-66 {
     width: 100%;
     border: 1px dashed black;
@@ -64,7 +79,7 @@ header {
 .col-60 {
     width: 100%;
     border: 1px dashed black;
-    border-radius: 20px;
+    border-radius: 40px;
     margin: 30px;
 }
 
@@ -76,7 +91,7 @@ header {
 .col-40 {
     width: 100%;
     border: 1px dashed black;
-    border-radius: 20px;
+    border-radius: 40px;
     margin: 30px;
 }
 
