--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,12 @@ header {
     width: 100%;
 }
 
+.row-wrap-nowrap {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+
 .d-flex-wrap {
     flex-wrap: wrap;
 }
@@ -68,12 +74,19 @@ header {
     margin: 20px 30px;
 }
 
+.col-70 {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 20px;
+    margin: 20px;
+    background-color: #9792E4;
+}
+
 .col-66 {
     width: 100%;
     border: 1px dashed black;
     border-radius: 20px;
     margin: 20px;
-
 }
 
 .col-60 {
@@ -100,6 +113,21 @@ header {
     border: 1px dashed black;
     border-radius: 20px;
     margin: 20px;
+}
+
+.col-33-viol {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 20px;
+    margin: 20px;
+}
+
+.col-30 {
+    width: 100%;
+    border: 1px dashed black;
+    border-radius: 20px;
+    margin: 20px;
+    background-color: #9792E4;
 }
 
 .content {
@@ -137,6 +165,14 @@ header {
         width: 100%;
     }
 
+    .row-wrap-nowrap {
+        flex-wrap: nowrap;
+    }
+
+    .col-70 {
+        width: calc(50% - 40px);
+    }
+
     .col-66 {
         width: calc(66% - 40px);
     }
@@ -144,14 +180,23 @@ header {
     .col-60 {
         width: 100%;
     }
+    
+    .col-40 {
+        width: 100%;
+    }
 
     .col-33 {
         width: calc(100% / 3 - 40px);
     }
 
-    .col-40 {
-        width: 100%;
+    .col-33-viol {
+        width: calc(50% - 40px);
     }
+
+    .col-30 {
+        width: calc(50% - 40px);
+    }
+
 
 
 }
@@ -159,6 +204,14 @@ header {
 @media screen and (min-width: 1200px) {
     .container {
         width: 1200px;
+    }
+
+    .row-wrap-nowrap {
+        flex-wrap: nowrap;
+    }
+
+    .col-70 {
+        width: calc(70% - 40px);
     }
 
     .col-66 {
@@ -175,5 +228,13 @@ header {
 
     .col-33 {
         width: calc(100% / 3 - 40px);
+    }
+
+    .col-33-viol {
+        width: calc(100% / 3 - 40px);
+    }
+
+    .col-30 {
+        width: calc(30% - 40px);
     }
 }
