--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ header {
     height: 70px;
 }
 
+i {
+    color: #fff;
+}
+
+ul {
+    display: none;
+}
+
 .container {
     width: 100%;
     margin: 0 auto;
@@ -102,6 +110,9 @@ header {
 
 .col-50 {
     width: 50%;
+}
+
+.border {
     border: 1px dashed black;
 }
 
@@ -135,7 +146,16 @@ header {
 }
 
 .content {
-    
+    display: flex;
+    align-items: center;
+}
+
+.logo {
+    justify-content: start;
+}
+
+.bars {
+    justify-content: end;
 }
 
 /* ALTEZZA CONTENT DA ELIMINARE */
@@ -212,6 +232,33 @@ header {
 @media screen and (min-width: 1200px) {
     .container {
         width: 1200px;
+    }
+
+    i {
+        visibility: hidden;
+    }
+
+    ul {
+        display: flex;
+        flex-direction: row;
+    }
+
+    li {
+        list-style-type: none;
+        padding: 8px 15px;
+        color: white;
+    }
+
+    .btn {
+        background-color: white;
+        color: black;
+        padding: 8px 15px;
+        border-radius: 20px;
+    }
+
+    .btn:hover {
+        background-color: black;
+        color: white;
     }
 
     .row-wrap-nowrap {
