--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,6 @@ ul {
 
 .col-60 {
     width: 100%;
-    border: 1px dashed black;
     border-radius: 40px;
     margin: 30px;
 }
@@ -118,7 +117,6 @@ ul {
 
 .col-40 {
     width: 100%;
-    border: 1px dashed black;
     border-radius: 40px;
     margin: 30px;
 }
@@ -158,10 +156,27 @@ ul {
 }
 
 .title {
-    color: #0084FD;
     font-weight: 800;
     font-size: 23px;
     padding: 25px 20px;
+}
+
+.blue {
+    color: #0084FD;
+}
+
+.title-white {
+    font-weight: 800;
+    font-size: 30px;
+    padding: 25px 10px;
+    color: white;
+}
+
+.title-black {
+    font-weight: 800;
+    font-size: 30px;
+    padding: 10px;
+    color: black;
 }
 
 .text {
@@ -169,6 +184,23 @@ ul {
     font-size: 13px;
     font-weight: 600;
     padding: 5px 20px;
+    line-height: 1.5;
+}
+
+.text-card {
+    color: black;
+    text-align: center;
+    font-size: 13px;
+    font-style: italic;
+    padding: 0 30px;
+    padding-bottom: 20px;
+    line-height: 1.5;
+}
+
+.text-white {
+    padding: 15px 10px;
+    color: white;
+    font-size: 13px;
     line-height: 1.5;
 }
 
@@ -194,6 +226,39 @@ ul {
 
 .padding-bottom-txt {
     padding-bottom: 20px;
+}
+
+.planning {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 40px 0;
+}
+
+.planning2 {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+.circle {
+    vertical-align: middle;
+    text-align:center;
+    left:150px;
+    position:relative; /*makes left effective*/
+    display:table-cell;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #9792E4;
+    margin-bottom: 20px;
+}
+
+.black {
+    color: black;
+    padding: 15px;
 }
 
 /* ALTEZZA CONTENT DA ELIMINARE */
